--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ api.url.download = https://i.giphy.com/media/{id}/giphy_s.gif
 
 resources.location.cache = storage/cache/
 resources.location.users = storage/users/
+resources.location.users.history-file-name = 'history.csv'
