--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ api.url = https://api.giphy.com/v1/gifs/random
 
 api.url.download = https://i.giphy.com/media/{id}/giphy_s.gif
 
+resources.file-extension = .gif
 resources.location.cache = storage/cache/
 resources.location.users = storage/users/
 resources.location.users.history-file-name = 'history.csv'
