Add in property file a symbol which uses in users history file as a separator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ api.url.download = https://i.giphy.com/media/{id}/giphy_s.gif
 resources.file-extension = .gif
 resources.location.cache = storage/cache/
 resources.location.users = storage/users/
-resources.location.users.history-file-name = 'history.csv'
+resources.location.users.history.filename = history.csv
+resources.location.users.history.separator = ,
