--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,1 @@
-server.port=5050
-
-api.key = 0HIGy2du2wlkbCwfkJ2mbDlakauql1mU
-api.url = https://api.giphy.com/v1/gifs/random
-
-api.url.download = https://i.giphy.com/media/{id}/giphy_s.gif
-
-resources.file-extension = .gif
-resources.location.cache = storage/cache/
-resources.location.users = storage/users/
-resources.location.users.history.filename = history.csv
-resources.location.users.history.separator = ,
+spring.profiles.active=@activatedProperties@
