--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,3 +10,5 @@ resources.location.cache = storage/cache/
 resources.location.users = storage/users/
 resources.location.users.history.filename = history.csv
 resources.location.users.history.separator = ,
+
+api.validation-header.name = X-BSA-GIPHY
