Create filter which logs all user requests to api

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,3 +11,4 @@ resources.location.users.history.filename = history.csv
 resources.location.users.history.separator = ,
 
 api.validation-header.name = X-BSA-GIPHY
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter = DEBUG
