--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,4 +11,6 @@ resources.location.users.history.filename = history.csv
 resources.location.users.history.separator = ,
 
 api.validation-header.name = X-BSA-GIPHY
+
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter = DEBUG
+management.endpoints.web.exposure.include=*
