Specify output file for log

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,3 +14,5 @@ api.validation-header.name = X-BSA-GIPHY
 
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter = DEBUG
 management.endpoints.web.exposure.include=*
+
+logging.file.name = logs/debug.log
